; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_template.c_test_repo_template__external_templates_specified_in_options.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_template.c_test_repo_template__external_templates_specified_in_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i8* }

@GIT_REPOSITORY_INIT_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@GIT_REPOSITORY_INIT_MKPATH = common dso_local global i32 0, align 4
@GIT_REPOSITORY_INIT_BARE = common dso_local global i32 0, align 4
@GIT_REPOSITORY_INIT_EXTERNAL_TEMPLATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"template\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"templated.git\00", align 1
@_repo = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_template__external_templates_specified_in_options() #0 {
  %1 = alloca %struct.TYPE_4__, align 8
  %2 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %2, i8* align 8 bitcast (%struct.TYPE_4__* @GIT_REPOSITORY_INIT_OPTIONS_INIT to i8*), i64 16, i1 false)
  %3 = load i32, i32* @GIT_REPOSITORY_INIT_MKPATH, align 4
  %4 = load i32, i32* @GIT_REPOSITORY_INIT_BARE, align 4
  %5 = or i32 %3, %4
  %6 = load i32, i32* @GIT_REPOSITORY_INIT_EXTERNAL_TEMPLATE, align 4
  %7 = or i32 %5, %6
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  %10 = call i32 @setup_templates(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 0)
  %11 = call i32 @setup_repo(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), %struct.TYPE_4__* %1)
  %12 = load i32, i32* @_repo, align 4
  %13 = call i32 @validate_templates(i32 %12, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @setup_templates(i8*, i32) #2

declare dso_local i32 @setup_repo(i8*, %struct.TYPE_4__*) #2

declare dso_local i32 @validate_templates(i32, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
